--- a/Examples/interactive-console/index.htm
+++ b/Examples/interactive-console/index.htm
@@ -68,6 +68,7 @@
     <link rel="stylesheet" href="./script/codemirror/theme/zenburn.css">
 
     <script src="./script/exoskeleton.js"></script>
+    <script src="./script/lokijs.js"></script>
     <script src="./script/jquery-3.2.1.min.js"></script>
     <script src="./index.js"></script>
     <script src="./script/codemirror/lib/codemirror.js"></script>
