Added 'serviceProcessor' infrastructure for abstracting service infrastructure
- Handles inner and outer json serialization of requests and responses
- Added internal serviceProcessors array member
- Added exoskeleton.registerServiceProcessor() function to handle requests
- More than one serviceProcessor can be registered for sequential iteration
- The first iterated serviceProcessor to return a response fulfills the request
- Added 'WebServerRoot', 'WebServerListenPort', and 'WebServerActualPort' to exoskeleton.getLocations() return object.

--- a/Examples/webservice-example/client-testpage.htm
+++ b/Examples/webservice-example/client-testpage.htm
@@ -29,5 +29,9 @@
       </td>
     </tr>
     </table>
+    
+    <br/><br/>
+    <button onclick="requestAboutUs()">Invoke 'About Us' service</button><br/>
+    <div id="AboutUsDiv"/>
 </body>
 </html>
