Enhancements to HistorySelectorForm and added icons for all examples

--- a/Examples/webservice-example/index.htm
+++ b/Examples/webservice-example/index.htm
@@ -9,8 +9,12 @@
 <body>
     <h3>Webservice Example</h3>
 
-    <p><i>This is an example webpage to demonstrate exoskeleton web services.  Web services must be enabled 
-    within your settings file and the extension/suffix can be modified there as well.  For this example,
+    <p>This is an example webpage to demonstrate exoskeleton web services.  It will create a json 
+    database and host webservices to query it or to request html. For the purposes of this demo, this 
+    app has little user interface, but it could be a full blown 'Native-UI', 'Mixed-UI', or 'WebUI' exoskeleton 
+    app, where service calls could run silently, or update user interface of the hosted page/form.</p>
+        
+    <p><i>Web services must be enabled within your settings file and the extension/suffix can be modified there as well.  For this example,
     we will leave the 'WebServerServicesExtention' set to '.svc'.</i></p>
 
     <p>Webservices (in exoskeleton) are mostly useful for communicating and exchanging data with other
