finalization for 0.8 release
- cleaned up locations and systemInfo; locations returns resolved paths to many locations, paths in application settings will be unresolved, removed hosted root from system info (use locations instead).
- exoskseleton version can now be queries via system.getSystemInfo() under 'ExoVersion' and 'ProductVersion' properties.
- cleaned up xml pathnames in XOS settings files to not double backslash

--- a/Examples/api-example/index.html
+++ b/Examples/api-example/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <h2>Exoskeleton API demo page</h2>
-
+    <h3><i>Open logger from window menu to see console output</i></h3>
     <h3>main</h3>
 
     <button onclick="runFullscreen()">Fullscreen</button>
