--- a/Examples/audioplayer-example/index.htm
+++ b/Examples/audioplayer-example/index.htm
@@ -11,8 +11,8 @@
         }
     </style>
 </head>
-<body>
-    <audio id='audioPlayer' controls volume=.5>
+<body style="margin:0px; padding:0px">
+    <audio id="audioPlayer" style="width:100%" controls volume=.5>
         <source id='mp3source' src="" type="audio/mp3">
         Your browser does not support the audio tag.
     </audio>
